samples/_failures_safe/1761391105_6d2345_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_727cc094.c: In function ‘main’:
./samples/SAFE/__tmp_727cc094.c:140:12: error: expected declaration or statement at end of input
  140 |     struct TextProcessor processor;
      |            ^~~~~~~~~~~~~
